# portfolio-platform

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  render.yaml
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml  helm-release.yml  load-test.yml
api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
api/app/: main.py  schemas.py
api/app/backtest/: engine.py
api/app/core/: config.py  logging.py  metrics.py  middleware.py
api/app/data/: fetcher.py  universe.py
api/app/data_files/: a2c_test_weights.csv  close_prices.csv  ddpg_test_weights.csv  ppo_test_weights.csv  sac_test_weights.csv  td3_test_weights.csv
api/app/data_files/models/: a2c_dow30.onnx  a2c_dow30_meta.json  a2c_mag7.onnx  a2c_mag7_meta.json  ddpg_dow30.onnx  ddpg_dow30_meta.json  ddpg_mag7.onnx  ddpg_mag7_meta.json  ppo_dow30.onnx  ppo_dow30_meta.json  ppo_mag7.onnx  ppo_mag7_meta.json  sac_dow30.onnx  sac_dow30_meta.json  sac_mag7.onnx  sac_mag7_meta.json  td3_dow30.onnx  td3_dow30_meta.json  td3_mag7.onnx  td3_mag7_meta.json
api/app/optimizers/: __init__.py  base.py  classical.py  drl.py
api/app/routers/: backtest.py  health.py  metrics.py  optimize.py  tickers.py
api/scripts/: train_drl.py
api/tests/: conftest.py  test_backtest.py  test_health.py  test_optimize.py  test_tickers.py
docs/: ARCHITECTURE.md  POSTMORTEM-2026-04-15.md  RUNBOOK.md  SLO.md
infra/argocd/: application.yaml  applicationset.yaml  project.yaml
web/: .dockerignore  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+47 files in other folders)
