[project]
name = "portfolio-platform-api"
version = "0.1.0"
description = "Production-grade portfolio optimization inference service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "pyportfolioopt==1.5.6",
    "scikit-learn==1.6.0",
    "yfinance>=1.4.1",
    "onnxruntime>=1.18",
    "prometheus-client==0.21.1",
    "structlog==24.4.0",
    "httpx==0.28.1",
    "cachetools==5.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "httpx==0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
